--- a/src/login/login.css
+++ b/src/login/login.css
@@ -1,4 +1,4 @@
-.login{
+/* .login{
     margin-top: 30px;
     text-align: center;
 }
@@ -12,4 +12,4 @@
     font-weight: bold;
     color: darkcyan;
     text-transform: uppercase;
-}
+} */
