--- a/src/signup/signup.css
+++ b/src/signup/signup.css
@@ -1,4 +1,4 @@
-.addUser{
+/* .addUser{
     margin: 50px auto;
     width: 25%;
     background-color: white;
@@ -22,4 +22,4 @@
 }
 .inputGroup button{
     margin-top: 10px;
-}
+} */
