--- a/src/App.css
+++ b/src/App.css
@@ -273,9 +273,10 @@
 }
 
 .product-image {
-  width: 100%; /* Full width */
-  height: auto; /* Maintain aspect ratio */
-  max-height: 150px; /* Limit height for images */
+  width: 100%; /* Full width of the container */
+  height: 100%; /* Full height of the container */
+  object-fit: cover; /* Ensure the image covers the container */
+  object-position: center; /* Center the image */
 }
 
 .product-name {
@@ -333,4 +334,54 @@
 .order-item:hover {
   transform: scale(1.05); /* Slightly enlarge item on hover */
 }
+
+/* New Inventory Form */
+form {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+form h2 {
+  text-align: center;
+  color: #283e4a;
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+form input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+form input::placeholder {
+  color: #aaa;
+}
+
+form button {
+  width: 100%;
+  padding: 12px;
+  background-color: #283e4a;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+form button:hover {
+  background-color: #1e2f3b;
+}
+
+
 
