--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
 /* Top NavBar */
 
+.button {
+  background: #0056b3;
+  color: #fff;
+  text-align: center;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.center {
+  display: flex;
+  justify-content: center;
+}
+
 .top-nav {
   display: flex;
   justify-content: space-between;
@@ -50,15 +64,35 @@
 }
 
 .welcome-message {
-  font-weight: bold;  /* Makes the text bold */
-  text-align: center;   /* Aligns text to the left */
-  margin-right: 10px;   /* Adjust margin to move it closer to the left */
-  font-size: 1.5em;   /* You can adjust the size as needed */
+  font-weight: bold; /* Makes the text bold */
+  text-align: center; /* Aligns text to the left */
+  margin-right: 10px; /* Adjust margin to move it closer to the left */
+  font-size: 1.5em; /* You can adjust the size as needed */
+}
+.welcome-notification {
+  font-weight: bold; /* Makes the text bold */
+  text-align: center; /* Aligns text to the left */
+  margin-right: 10px; /* Adjust margin to move it closer to the left */
+  font-size: 1em; /* You can adjust the size as needed */
+  font-weight: 500;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
 /* Modal styles */
-.modal-overlay {
+
+.modal {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-overlay {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
@@ -69,6 +103,12 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+}
+.modal-content {
+  position: relative;
+  background: #fff;
+  z-index: 1001;
+  border-radius: 10px;
 }
 
 .login-modal {
@@ -112,6 +152,13 @@
 
 .login-modal .close-button:hover {
   background-color: #c82333;
+}
+.login_clickhere {
+  text-align: center;
+}
+.login_clickhere a {
+  color: #0056b3;
+  cursor: pointer;
 }
 
 .error-message {
@@ -171,7 +218,7 @@
 
 /* Right Cart */
 .right-cart {
-  background-color: #f7f7f7;; /* Light background color for the cart */
+  background-color: #f7f7f7; /* Light background color for the cart */
   padding: 20px; /* Padding inside the cart */
   width: 300px; /* Fixed width for the cart */
   margin-top: 20px;
@@ -185,11 +232,24 @@
 .cart-item {
   display: flex; /* Use flexbox for layout */
   justify-content: space-between; /* Space between item name and price */
+  margin-bottom: 6px;
+}
+.cart-item-container {
   padding: 10px; /* Padding inside each item box */
+  background-color: #fff; /* White background for item boxes */
   border: 1px solid #ccc; /* Border for each item box */
   border-radius: 5px; /* Rounded corners for item boxes */
   margin-bottom: 10px; /* Space between items */
-  background-color: #fff; /* White background for item boxes */
+}
+.cart-item-remove {
+  margin-top: 6px;
+  padding: 4px;
+  border-radius: 5px;
+  background: #0056b3;
+  color: #fff;
+  font-size: 12px;
+  padding: 4px 6px;
+  cursor: pointer;
 }
 
 .cart-item:last-child {
@@ -217,7 +277,10 @@
 /* InventoryDash */
 .inventory-container {
   display: grid; /* Use grid layout */
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Responsive grid */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(200px, 1fr)
+  ); /* Responsive grid */
   gap: 20px; /* Space between grid items */
   padding: 20px; /* Padding around the container */
 }
@@ -254,7 +317,10 @@
 /* Inventory */
 .inventory-container {
   display: grid; /* Use grid layout */
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Responsive grid */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(200px, 1fr)
+  ); /* Responsive grid */
   gap: 20px; /* Space between grid items */
   padding: 20px; /* Padding around the container */
 }
@@ -273,9 +339,10 @@
 }
 
 .product-image {
-  width: 100%; /* Full width */
-  height: auto; /* Maintain aspect ratio */
-  max-height: 150px; /* Limit height for images */
+  width: 100%; /* Full width of the container */
+  height: 100%; /* Full height of the container */
+  object-fit: cover; /* Ensure the image covers the container */
+  object-position: center; /* Center the image */
 }
 
 .product-name {
@@ -317,7 +384,10 @@
 
 .order-history-list {
   display: grid; /* Use grid layout */
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Responsive grid */
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(250px, 1fr)
+  ); /* Responsive grid */
   gap: 20px; /* Space between grid items */
 }
 
@@ -334,3 +404,133 @@
   transform: scale(1.05); /* Slightly enlarge item on hover */
 }
 
+/* New Inventory Form */
+form {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+form h2 {
+  text-align: center;
+  color: #283e4a;
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+form input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+form select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+form input::placeholder {
+  color: #aaa;
+}
+
+form button {
+  width: 100%;
+  padding: 12px;
+  background-color: #283e4a;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+form button:hover {
+  background-color: #1e2f3b;
+}
+
+/* Login.js */
+.login-container {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tile-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fill,
+    minmax(225px, 1fr)
+  ); /* Automatically adjust columns */
+  grid-template-rows: repeat(
+    auto-fill,
+    minmax(350px, 1fr)
+  ); /* Adjust rows similarly */
+  z-index: 1;
+}
+
+.tile {
+  background-size: cover;
+  background-position: center;
+  animation: fade 5s infinite;
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 0.8;
+  }
+}
+
+.login-overlay {
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-form {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.delete {
+  background: #c82333;
+  margin-top: 20px;
+  text-align: center;
+  padding: 10px 0;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
